--- a/.project
+++ b/.project
@@ -15,6 +15,13 @@
 		<nature>org.eclipse.jdt.groovy.core.groovyNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>kat-769775257823178723.groovy</name>
+			<type>1</type>
+			<location>C:/Users/LOC~1.PHU/AppData/Local/Temp/Katalon/Web Services/kat-769775257823178723.groovy</location>
+		</link>
+	</linkedResources>
 	<filteredResources>
 		<filter>
 			<id>1717603287118</id>
